<resources>
    <string name="app_name">Final Project Turtles</string>
    <string name="title2ndPage">What We Can Do</string>
    <string name="flavor2ndPage">Participate in coastal clean-ups and reduce plastic use to keep our beaches and ocean clean. Trash in the ocean can harm sea turtles and other creatures that live there. You guys can also help spread awareness!</string>
    <string name="turtleButton">Click me to learn more online:</string>
    <string name="summary">Turtles are struggling every day due to unnatural pollution caused by humans. We are a nonprofit organization that has certified staff to take care of sea turtles that almost lost their lives and giving them a second chance to live. You guys can help too!</string>
    <string name="button1">What Can We Do?</string>
    <string name="button2">Donate Now!</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="card_number_text">Card Number</string>
    <string name="card_number_example">XXXX - XXXX - XXXX - XXXX</string>
    <string name="expires_text">Expires</string>
    <string name="month_text">Month (MM)</string>
    <string name="year_text">Year (YYYY)</string>
    <string name="security_text">Security Code (123)</string>
    <string name="pay_now_button">PAY NOW</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="turtleButton2">Click me to watch random turtle videos:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credit_card_text">Credit Card</string>
    <string name="debit_card_text">Debit Card</string>
    <string name="thank_you_title_text">Thank You For Donating!</string>
    <string name="thanks_description_text">Thanks to all the people who have donated money and support our cause. You can rest safely knowing that every penny goes towards non-profit organizations that are taking care of these endangered wild animals.</string>
    <string name="home_page_text">Home Page</string>
    <string name="pay_amount_text">Please enter the amount of money you would like to donate.</string>
    <string name="confirmation_text">CONFIRMATION</string>
    <string name="confirmation_question_text">Are you sure you would like to make this purchase?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>

</resources>