<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABF484"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="86dp"
        android:onClick="sendDonation"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="19dp"
        android:text="SAVING THE TURTLES"
        android:textColor="#009688"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="375dp"
        android:layout_height="134dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="132dp"
        android:text="@string/summary"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="86dp"
        android:onClick="sendSecond"
        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="341dp"
        android:layout_height="317dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/turtlehelper" />
</androidx.constraintlayout.widget.ConstraintLayout>